history almost done

--- a/history.html
+++ b/history.html
@@ -252,19 +252,55 @@
 				історія
 			</p>
 		</div>
-		<div class="row">
-			<div class="historytree--wrapper">
-				<div class="lastpoint col-xs-3">
+		<div class="historytree--wrapper">
+			<div class="row">
+				<div class="historytree--wrapper_item lastpoint col-xs-3" data-aos="fade-right" data-aos-delay="50">
 					<p>2018</p>
 				</div>
-
-				<div class="y2017 col-xs-3">
-					saddasdasd
+				<div class="line-h col-xs-4"></div>
+				<div class="historytree--wrapper_item y2017 col-xs-5" data-aos="fade-left" data-aos-delay="100">
+					<img class="img-responsive" src="img/2017.png" alt="">
+				</div>
+				<div class="line-v"></div>
+			</div>
+			<div class="row">
+				<div class="historytree--wrapper_item y2017-2 col-xs-offset-2 col-xs-5" data-aos="fade-up" data-aos-delay="150">
+					<img class="img-responsive" src="img/2017-2.png" alt="">
+				</div>
+				<div class="line-h col-xs-1"></div>
+				<div class="historytree--wrapper_item y2016 col-xs-4" data-aos="fade-left" data-aos-delay="200">
+					<img class="img-responsive" src="img/2016.png" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="historytree--wrapper_item y2015 col-xs-offset-1 col-xs-5" data-aos="fade-right" data-aos-delay="250">
+					<img class="img-responsive" src="img/2015.png" alt="">
+				</div>
+				
+				<div class="historytree--wrapper_item y2014 col-xs-offset-1 col-xs-5" data-aos="fade-left" data-aos-delay="300">
+					<img class="img-responsive" src="img/2014.png" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="historytree--wrapper_item showNextTimelapse col-xs-offset-1 col-xs-3">
+					<p style="color: grey; text-align: center; padding-top: 10px;"> * * *</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+<section>
+	<div class="container-fluid" id="consist">
+		<div class="row">
+			<div class="consist--header">
+					<p class="historytree--header">
+							Карта брендів
+						</p>
+			</div>
+			<img class="img-responsive" src="img/consist.jpg" alt=""></div>
+	</div>
+</section>
 
 <!-- FOOTER -->
 <footer class="page-footer font-small blue">
