--- a/social.html
+++ b/social.html
@@ -50,12 +50,12 @@
 							<!-- Collect the nav links, forms, and other content for toggling -->
 							<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
-									<li><a href="index.html">ПРО НАС</a></li>
+									<li><a href="history.html">ПРО НАС</a></li>
 									<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
 									<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-									<li><a href="#">МЕДІА-ЦЕНТР</a></li>
+									<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
 									<li><a href="career.html">КАР’ЄРА</a></li>
-									<li><a href="#">КОНТАКТИ</a></li>
+									<li><a href="contacts.html">КОНТАКТИ</a></li>
 								</ul>
 							</div>
 							<!-- /.navbar-collapse --> 
