--- a/investors.html
+++ b/investors.html
@@ -111,7 +111,7 @@
 					<p class="col-sm-10">К ЛІГА на постійній основі інвестує кошти в зростання наявних напрямків бізнесу. Крім цього, ми готові інвестувати кошти в придбання нових бізнесів, які відповідатимуть нашим цінностям та стратегії розвитку Групи. </p>
 
 					
-					<buttom class="btn btn-danger">ЗВ'ЯЗАТИСЯ З НАМИ</buttom>
+					<button class="btn btn-danger">ЗВ'ЯЗАТИСЯ З НАМИ</button>
 				</div>
 
 			</div>
