Fix all main / social / about pages

--- a/history.html
+++ b/history.html
@@ -42,7 +42,7 @@
 							<div class="navbar-header">
 								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 								</button>
-								<a class="navbar-brand page-scroll" href="#page-top">
+								<a class="navbar-brand page-scroll" href="index.html">
 									<img class="img-responsive" src="img/logo.png">
 								</a> 
 							</div>
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-6">
+				<div class="firstSection--content col-md-offset-2 col-md-10">
 					<p class="firstSection--content_mainText">Обєднання іноваційних та
                         динамічно зростающих бізнесів,
                         які діють на різних ринках</p>
@@ -79,17 +79,17 @@
 <section class="secondSection">
 	<div class="container">
 		<div class="row">
-			<div class="secondSection--content col-md-7">
-				<p class="secondSection--content_mainText" data-aos="fade-up">Група Компаній ЛІГА</p>
+			<div class="secondSection--content col-md-12">
+				<p class="secondSection--content_mainText standart--header" data-aos="fade-up">Група Компаній ЛІГА</p>
 
-				<p data-aos="fade-left" data-aos-delay="150">ЛІГА — це глобальний успішний бізнес, який будується вже третім поколінням родини Бондаренко, Вже 26 років наші Компанії формують нову культуру бізнес-діяльності, роблять значний внесок в розвиток України та покращують та змінюють життя суспільства.</p>
+				<p data-aos="fade-left" data-aos-delay="150" class="standat--textcolor fira--sans">ЛІГА — це глобальний успішний бізнес, який будується вже третім поколінням родини Бондаренко, Вже 26 років наші Компанії формують нову культуру бізнес-діяльності, роблять значний внесок в розвиток України та покращують та змінюють життя суспільства.</p>
 
-				<p data-aos="fade-left" data-aos-delay="350">
+				<p data-aos="fade-left" data-aos-delay="350" class="standat--textcolor fira--sans">
                     В 1991 році було лише 5 людей, які започаткували Інформаційно-Аналітичний Центр ЛІГА, який став початком великого бізнесу та дав старт багатьом інноваційним та унікальним компаніям, які діють сьогодні на ринках не тільки України, але і світу. За цей час ми отримали більше 10 0000 мільйонів унікальних користувачів, лояльних споживачів та задоволених клієнтів.</p>			
-				<p data-aos="fade-left" data-aos-delay="550">
+				<p data-aos="fade-left" data-aos-delay="550" class="standat--textcolor fira--sans">
                     Поява Групи Компаній в 2007 році стало логічною еволюцією та об’єднало усі активи бізнесу. Сьогодні бізнеси Групи, які діють на абсолютно різноманітних ринках, зростає постійно, до Групи приєднуються партнери, відкриваються філіали по всьому світу.</p>			
 				
-				<p data-aos="fade-left" data-aos-delay="750">
+				<p data-aos="fade-left" data-aos-delay="750" class="standat--textcolor fira--sans">
                     Стати частиною Групи — це разом з нами БУДУВАТИ КРАЇНУ МРІЇ та повністю поділяти наші цінності. </p>			
 				
 			</div>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="thirdSection--history_content">
                 <div class="slider">
-                    <p class="slider--header">Наші цінності</p>
+                    <p class="slider--header standart--header ">Наші цінності</p>
 
                     <!-- SLIDER -->
 				<div class="fourthSection--content_slider">
@@ -197,7 +197,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<P class="nagl-rada--header">НАГЛЯДОВА РАДА</P>
+				<P class="nagl-rada--header standart--header">НАГЛЯДОВА РАДА</P>
 			</div>
 		</div>
 		<div class="row">
@@ -245,10 +245,25 @@
 	</div>
 </section>
 
+
+<section>
+	<div class="container-fluid" id="consist">
+		<div class="row">
+			<div class="consist--header">
+					<p class="historytree--header standart--header">
+							Карта брендів
+						</p>
+			</div>
+			<img class="img-responsive" src="img/consist.jpg" alt=""></div>
+	</div>
+</section>
+
+
+
 <div class="section historytree">
 	<div class="container">
 		<div class="row">
-			<p class="historytree--header">
+			<p class="historytree--header standart--header">
 				історія
 			</p>
 		</div>
@@ -290,17 +305,7 @@
 	</div>
 </div>
 
-<section>
-	<div class="container-fluid" id="consist">
-		<div class="row">
-			<div class="consist--header">
-					<p class="historytree--header">
-							Карта брендів
-						</p>
-			</div>
-			<img class="img-responsive" src="img/consist.jpg" alt=""></div>
-	</div>
-</section>
+
 
 <!-- FOOTER -->
 <footer class="page-footer font-small blue">
