--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<!-- end video -->
 
 				<!-- Navigation -->
+				<div class="row">
 				<div class="col-md-offset-2">
 					<nav id="menu" class="navbar navbar-default">
 						<div class="container"> 
@@ -52,7 +53,7 @@
 							<div class="navbar-header">
 								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 								</button>
-								<a class="navbar-brand page-scroll" href="#page-top">
+								<a class="navbar-brand page-scroll" href="index.html">
 									<img class="img-responsive" src="img/logo.png">
 								</a> 
 							</div>
@@ -73,13 +74,13 @@
 						<!-- /.container-fluid --> 
 					</nav>
 				</div>
-
-				<div class="firstSection--content col-md-offset-2 col-md-7">
+			
+				<div class="firstSection--content col-md-offset-2 col-md-10">
 					<p class="firstSection--content_mainText">26 років бездоганної репутації 
 						високоефективного бізнесу <br>
 					на ринку україни</p>
 				</div>
-
+			</div>
 			</div>
 		</div>
 </section>
@@ -89,14 +90,14 @@
 <section class="secondSection">
 	<div class="container">
 		<div class="row">
-			<div class="secondSection--content col-md-offset-1 col-md-6">
-				<p class="secondSection--content_mainText" data-aos="fade-up">Група Компаній ЛІГА</p>
+			<div class="secondSection--content col-md-offset-1 col-md-10">
+				<p class="secondSection--content_mainText standart--header" data-aos="fade-up">Група Компаній ЛІГА</p>
 
-				<p data-aos="fade-left" data-aos-delay="150">Це об’єднання незалежних інноваційних бізнесів, які успішно діють 
+				<p data-aos="fade-left" class="fira--sans standat--textcolor" data-aos-delay="150">Це об’єднання незалежних інноваційних бізнесів, які успішно діють 
 					на різних ринках України понад 26 років. До складу Групи входять компанії, які спрямовані на розвиток галузі, підвищення галузевих стандартів якості, вдосконалення взаємодії між бізнесом, державою та суспільством.
 				</p>
 
-				<p data-aos="fade-left" data-aos-delay="350">Ми інвестуємо в динамічне зростання та ефективність нашого бізнесу, 
+				<p data-aos="fade-left" class="fira--sans standat--textcolor" data-aos-delay="350">Ми інвестуємо в динамічне зростання та ефективність нашого бізнесу, 
 				що сприяє економічному розвитку країни та суспільства. Усі Компанії Групи поділяють наші цінності та місію, а завдяки взаєморозумінню та спільним цілям кожен із бізнесів досягає успіху.</p>
 
 				</div>
@@ -112,8 +113,8 @@
 		<div class="row">
 			<div class="thirdSection--content">
 
-				<p class="thirdSection--content_header" data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">Наша місія:</p>
-				<p class="underHeader" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">будуємо країну мрії</p>
+				<p class="thirdSection--content_header standart--header" data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">Наша місія:</p>
+				<p class="underHeader standart--header" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">будуємо країну мрії</p>
 
 			</div>
 		</div>
@@ -127,7 +128,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="fourthSection--content">
-				<p class="fourthSection--content_header" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="250">Напрямки  <br> бізнесу</p>
+				<p class="fourthSection--content_header standart--header" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="250">Напрямки  <br> бізнесу</p>
 				<!-- SLIDER -->
 				<div class="fourthSection--content_slider">
 					<div class="container-fluid banner_fluid">
@@ -310,7 +311,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="fifthSection--content">
-				<p class="fifthSection--content_header" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="250">Склад групи <br> компаній ЛІГА</p>
+				<p class="fifthSection--content_header standart--header" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="250">Склад групи <br> компаній ЛІГА</p>
 
 				<div class="icon-table col-md-12">
 					<div class="row icon-table--row">
