--- a/media.html
+++ b/media.html
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-6">
+				<div class="firstSection--content col-md-offset-2 col-md-10">
 					<p class="firstSection--content_mainText">Формуємо нову культуру
                             бізнес діяльності </p>
 				</div>
@@ -102,7 +102,7 @@
                         <figcaption>
                             <p>30 серпня 2018 року</p>
                             <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
-                            <p><a class="link" href="#">Детальніше</a></p>
+                            <p><a href="#">Детальніше</a></p>
                         </figcaption>
                     </figure>
                 </div>
