--- a/investors.html
+++ b/investors.html
@@ -42,7 +42,7 @@
 							<div class="navbar-header">
 								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 								</button>
-								<a class="navbar-brand page-scroll" href="#page-top">
+								<a class="navbar-brand page-scroll" href="index.html">
 									<img class="img-responsive" src="img/logo.png">
 								</a> 
 							</div>
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-6">
+				<div class="firstSection--content col-md-offset-2 col-md-10">
 					<p class="firstSection--content_mainText">Відкритість, надійність
 						та довірливість в
 					партнерських відносинах</p>
