Do other pages and some Jenia fixes

--- a/career.html
+++ b/career.html
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-10">
+				<div class="firstSection--content col-md-offset-3 col-md-8">
 					<p class="firstSection--content_mainText">Ми вже досягли успіху
 						і готові допомогти вам
 					реалізувати свій потенціал</p>
@@ -82,12 +82,12 @@
 			<div class="secondSection--content col-md-8">
 				<p class="secondSection--content_mainText" data-aos="fade-up">кар'єра у групi компанiй  лiга</p>
 
-				<p data-aos="fade-left" data-aos-delay="150">ГК ЛІГА надає широкі можливості для розкриття власного потенціалу та кар'єрного зростання своїх працівників. Наш колектив - це команда професіоналів, яка реалізує загальну велику місію - крок за кроком ми БУДУЄМО КРАЇНУ МРІЇ, в якій хочемо жити.
+				<p class="fz18 standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="150">ГК ЛІГА надає широкі можливості для розкриття власного потенціалу та кар'єрного зростання своїх працівників. Наш колектив - це команда професіоналів, яка реалізує загальну велику місію - крок за кроком ми БУДУЄМО КРАЇНУ МРІЇ, в якій хочемо жити.
 				</p>
 
-				<p data-aos="fade-left" data-aos-delay="350">
+				<p class="fz18 standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="350">
 				Ми прагнемо працювати з однодумцями, які поділяють наші цінності, та чия енергія і професійні знання будуть сприяти в досягненні ГК ЛІГА амбітних цілей. Ми завжди раді натхненним кандитам, які бажають приєднатися до нашої команди.</p>			
-				<p data-aos="fade-left" data-aos-delay="550">
+				<p class="fz18 standat--textcolor fira--sans" data-aos="fade-left" data-aos-delay="550">
 				Якщо ви хочете приєднатися до нас, просто заповніть форму на сайті або відправляйте нам своє резюме.</p>
 <!-- 
 				<div class="secondSection--content_verticalLine" data-aos="fade-bottom" data-aos-delay="550"></div> -->
@@ -105,34 +105,34 @@
 		<div class="row">
 			<div class="col-md-offset-2 col-md-4">
 				<form action="#" class="career--ts_form">
-					<p class="secondSection--content_mainText" data-aos="fade-up">ВІДПРАВИТИ РЕЗЮМЕ</p>
+					<p class="secondSection--content_mainText standat--textcolor" data-aos="fade-up">ВІДПРАВИТИ РЕЗЮМЕ</p>
 					<div class="form-group" data-aos="fade-left" data-aos-delay="150">
-						<label class="col-sm-12 control-label" >Ваше iм’я та прiзвище</label>
+						<label class="col-sm-12 control-label fz18 standat--textcolor fira--sans" >Ваше iм’я та прiзвище</label>
 						<div class="col-sm-12">
 							<input type="text" class="form-control" >
 						</div>
 					</div>
 					<div class="form-group" data-aos="fade-right" data-aos-delay="350">
-						<label class="col-sm-12 control-label">Я хочу працювати в: </label>
+						<label class="col-sm-12 control-label fz18 standat--textcolor fira--sans">Я хочу працювати в: </label>
 						<div class="col-sm-12">
 							<input type="text" class="form-control" >
 						</div>
 					</div>
 					
 					<div class="form-group"data-aos="fade-left" data-aos-delay="550">
-						<label for="inputPassword3" class="col-sm-12 control-label">Ваш e-mail </label>
+						<label for="inputPassword3" class="col-sm-12 control-label fz18 standat--textcolor fira--sans">Ваш e-mail </label>
 						<div class="col-sm-12">
 							<input type="email" class="form-control">
 						</div>
 					</div>
 
 					<div class="form-group col-sm-12">
-						<buttom class="btn btn-danger">ВІДПРАВИТИ</buttom>
+						<button class="btn btn-danger fz18 standat--textcolor fira--sans">ВІДПРАВИТИ</button>
 					</div>
 				</form>
 			</div>
 			<div class="col-md-6 nopadding ">
-				<img src="img/careerWork.jpg" alt="" class="img-uncolored img-responsive">
+				<img src="img/careerWork.png" alt="" class="img-uncolored img-responsive">
 			</div>
 		</div>
 	</div>
@@ -140,11 +140,22 @@
 <!-- THIRD SECTION END-->
 
 <!-- FOOTER -->
-<footer class="page-footer font-small blue">
+<footer class="footer page-footer font-small blue">
+
 	<!-- Copyright -->
 	<div class="row">
-		<div class="col-xs-offset-2 col-xs-8">
-			<p class="copyright">@2018 LIGA GROUP</p>
+		<div class="col-xs-offset-5 col-xs-2">
+			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+		</div>
+		<div class="col-xs-offset-3 col-xs-6">
+			<ul class="footer-nav">
+				<li><a href="history.html">ПРО НАС</a></li>
+				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
+				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
+				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
+				<li><a href="career.html">КАР’ЄРА</a></li>
+				<li><a href="contacts.html">КОНТАКТИ</a></li>
+			</ul>
 		</div>
 
 	</div>
@@ -153,8 +164,6 @@
 
 </footer>
 <!-- FOOTER END-->
-
-	<!-- FOOTER END-->
 	<script src="js/scripts.min.js"></script>
 
 </body>
