--- a/investors.html
+++ b/investors.html
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-10">
+				<div class="firstSection--content col-md-offset-3 col-md-8">
 					<p class="firstSection--content_mainText">Відкритість, надійність
 						та довірливість в
 					партнерських відносинах</p>
@@ -79,13 +79,13 @@
 <section class="secondSection">
 	<div class="container">
 		<div class="row">
-			<div class="secondSection--content col-md-7">
-				<p class="secondSection--content_mainText" data-aos="fade-up">АКЦІОНЕРАМ ТА ІНВЕСТОРАМ</p>
+			<div class="secondSection--content col-md-10">
+				<p class="secondSection--content_mainText standart--header" data-aos="fade-up">АКЦІОНЕРАМ ТА ІНВЕСТОРАМ</p>
 
-				<p data-aos="fade-left" data-aos-delay="150">ГК ЛІГА завжди готова до діалогу з теперішніми та потенційними інвесторами. Нам цікаво реалізовувати нові проекти і ми отримуємо визнання. Саме тому ми відкриті до всіх форматів ділової співпраці: від партнерства до прямих інвестицій.
+				<p class="standat--textcolor" data-aos="fade-left" data-aos-delay="150">ГК ЛІГА завжди готова до діалогу з теперішніми та потенційними інвесторами. Нам цікаво реалізовувати нові проекти і ми отримуємо визнання. Саме тому ми відкриті до всіх форматів ділової співпраці: від партнерства до прямих інвестицій.
 				</p>
 
-				<p data-aos="fade-left" data-aos-delay="350">
+				<p class="standat--textcolor" data-aos="fade-left" data-aos-delay="350">
 				Наші ділові партнери поділяють наші цінності, а завдяки взаєморозумінню та спільним цілям кожен із бізнесів досягає успіху.</p>			
 				<!-- 
 				<div class="secondSection--content_verticalLine" data-aos="fade-bottom" data-aos-delay="550"></div> -->
@@ -106,12 +106,12 @@
 			</div>
 			<div class="col-md-5">
 				<div class="investors--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
-					<p class="col-sm-10">Структура корпоративного управління ГК ЛІГА відповідає найвищим міжнародним стандартам і базується на найкращих світових практиках. Вона дозволяє швидко й ефективно приймати рішення, що забезпечує розвиток кожного з галузевих холдингів і напрямків бізнесу Групи. </p>
+					<p class="col-sm-10 fz18 fira--sans">Структура корпоративного управління ГК ЛІГА відповідає найвищим міжнародним стандартам і базується на найкращих світових практиках. Вона дозволяє швидко й ефективно приймати рішення, що забезпечує розвиток кожного з галузевих холдингів і напрямків бізнесу Групи. </p>
 
-					<p class="col-sm-10">К ЛІГА на постійній основі інвестує кошти в зростання наявних напрямків бізнесу. Крім цього, ми готові інвестувати кошти в придбання нових бізнесів, які відповідатимуть нашим цінностям та стратегії розвитку Групи. </p>
+					<p class="col-sm-10 fz18 fira--sans">К ЛІГА на постійній основі інвестує кошти в зростання наявних напрямків бізнесу. Крім цього, ми готові інвестувати кошти в придбання нових бізнесів, які відповідатимуть нашим цінностям та стратегії розвитку Групи. </p>
 
 					
-					<button class="btn btn-danger">ЗВ'ЯЗАТИСЯ З НАМИ</button>
+					<button class="btn btn-danger fz18 fira--sans">ЗВ'ЯЗАТИСЯ З НАМИ</button>
 				</div>
 
 			</div>
@@ -121,12 +121,24 @@
 </section>
 <!-- THIRD SECTION END-->
 
+
 <!-- FOOTER -->
-<footer class="page-footer font-small blue">
+<footer class="footer page-footer font-small blue">
+
 	<!-- Copyright -->
 	<div class="row">
-		<div class="col-xs-offset-2 col-xs-8">
-			<p class="copyright">@2018 LIGA GROUP</p>
+		<div class="col-xs-offset-5 col-xs-2">
+			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+		</div>
+		<div class="col-xs-offset-3 col-xs-6">
+			<ul class="footer-nav">
+				<li><a href="history.html">ПРО НАС</a></li>
+				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
+				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
+				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
+				<li><a href="career.html">КАР’ЄРА</a></li>
+				<li><a href="contacts.html">КОНТАКТИ</a></li>
+			</ul>
 		</div>
 
 	</div>
