--- a/social.html
+++ b/social.html
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-10">
+				<div class="firstSection--content col-md-offset-3 col-md-7">
 					<p class="firstSection--content_mainText">Відкритість, надійність
 						та довірливість в
 					партнерських відносинах</p>
@@ -110,7 +110,7 @@
 		<div class="row">
 			<div class="wallpaper--wrapper">
 				<p class="wallpaper--wrapper_header standart--header col-xs-12" data-aos="fade-up" data-aos-delay="150">Наші досягнення</p>
-				<p class="wallpaper--wrapper_body standat--textcolor fira--sans fz15 col-xs-offset-4 col-xs-4" data-aos="fade-top" data-aos-delay="350">
+				<p class="wallpaper--wrapper_body standat--textcolor fz18 fira--sans  col-xs-offset-2 col-xs-8" data-aos="fade-top" data-aos-delay="350">
 				Ми враховуємо інтереси кожного і виступаємо ініціаторами позитивних 
 				змін своїм залученням, закликом і особистим прикладом. <br><br>
 
@@ -132,7 +132,7 @@
 			
 			<div class="col-md-offset-1 col-md-5">
 				<div class="social--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
-					<p class="col-sm-7 standat--textcolor fz18 fira--sans">В 2015 році ГК ЛІГА заснувала Міжнародний благодійний фонд «Let’s Help». Адміністративні витрати Фонду повністю фінансуються засновниками, отже 100% залучених коштів використовується у благодійних цілях. На даний час фонд зібрав більше 6 млн грн, а допомогу отримали майже 2 тисячі людей.</p>	
+					<p class="col-sm-12 standat--textcolor fz18 fira--sans">В 2015 році ГК ЛІГА заснувала Міжнародний благодійний фонд «Let’s Help». Адміністративні витрати Фонду повністю фінансуються засновниками, отже 100% залучених коштів використовується у благодійних цілях. На даний час фонд зібрав більше 6 млн грн, а допомогу отримали майже 2 тисячі людей.</p>	
 					<a class="col-sm-10 fz18" href="#">Детальніше</a>
 
 				</div>
@@ -158,12 +158,8 @@
 			</div>
 			<div class="col-md-offset-1 col-md-5">
 				<div class="social--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
-					<p class="col-sm-7 standat--textcolor fz18 fira--sans">З 2017 року до складу ГК ЛІГА увійшла AROMA KAVA. Мережа кав’ярень співпрацює з міжнародним благодійним фондом «Таблеточка», який допомагає дітям з онкологічними захворюваннями.</p>
-
-					
-
+					<p class="col-sm-12 standat--textcolor fz18  fira--sans">З 2017 року до складу ГК ЛІГА увійшла AROMA KAVA. Мережа кав’ярень співпрацює з міжнародним благодійним фондом «Таблеточка», який допомагає дітям з онкологічними захворюваннями.</p>
 					<a class="col-sm-10 fz18" href="#">Детальніше</a>
-
 				</div>
 
 			</div>
@@ -182,9 +178,9 @@
 			
 			<div class="col-md-offset-1 col-md-5">
 				<div class="social--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
-					<p class="col-sm-7 standat--textcolor fz18 fira--sans">Ми прагнемо раціонально використовувати природні ресурси і відповідально підходимо до поводження з відходами. Діяльність компанії Möbius, яка входить до складу ГК ЛІГА — це внесок у розбудову енергетичної незалежності нашої держави.</p>
+					<p class="col-sm-12 standat--textcolor fz18 fira--sans">Ми прагнемо раціонально використовувати природні ресурси і відповідально підходимо до поводження з відходами. Діяльність компанії Möbius, яка входить до складу ГК ЛІГА — це внесок у розбудову енергетичної незалежності нашої держави.</p>
 
-					<p class="col-sm-7 standat--textcolor fz18 fira--sans">Ми заохочуємо і підтримуємо волонтерську діяльність наших співробітників. Програми корпоративного волонтерства ГК ЛІГА
+					<p class="col-sm-12 standat--textcolor fz18 fira--sans">Ми заохочуємо і підтримуємо волонтерську діяльність наших співробітників. Програми корпоративного волонтерства ГК ЛІГА
 						покликані зробити практичний внесок у вирішення значущих
 						соціальних проблем суспільства, а також сприяють розвитку
 						корпоративної культури і створюють умови для самореалізації співробітників Групи.</p>
@@ -215,7 +211,7 @@
 			</div>
 			<div class="col-md-offset-1 col-md-5">
 				<div class="social--ts_textblock" data-aos="fade-up" data-aos-delay="350"> 
-					<p class="col-sm-7 standat--textcolor fz18 fira--sans">Також ми хочемо, щоб екологічна культура стала невід'ємною частиною нашого життя та життя наших співробітників. Ми вважаємо,
+					<p class="col-sm-12 standat--textcolor fz18 fira--sans">Також ми хочемо, щоб екологічна культура стала невід'ємною частиною нашого життя та життя наших співробітників. Ми вважаємо,
 						що кожен може принести користь і поліпшити життя людей навколо нас і підтримуємо волонтерську діяльність, спрямовану на збереження планети і поліпшення життя на території нашої присутності. Вже п'ять років ми організовуємо ініціативу #ЧистийЧетвер, в рамках якої ми обираємо території,
 						 на яких створюємо простір, де приємно і комфортно жити та відпочивати. </p>
 
@@ -232,19 +228,26 @@
 
 
 <section class="only-img">
-	<div class="container-fluid">
-		<div class="row">
-			<img class="img-responsive" src="img/socialBotBg.jpg" alt=""></div>
-		</div>
-	</div>
+	
 </section>
 
 <!-- FOOTER -->
-<footer class="page-footer font-small blue">
+<footer class="footer page-footer font-small blue">
+
 	<!-- Copyright -->
 	<div class="row">
-		<div class="col-xs-offset-2 col-xs-8">
-			<p class="copyright">@2018 LIGA GROUP</p>
+		<div class="col-xs-offset-5 col-xs-2">
+			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+		</div>
+		<div class="col-xs-offset-3 col-xs-6">
+			<ul class="footer-nav">
+				<li><a href="history.html">ПРО НАС</a></li>
+				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
+				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
+				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
+				<li><a href="career.html">КАР’ЄРА</a></li>
+				<li><a href="contacts.html">КОНТАКТИ</a></li>
+			</ul>
 		</div>
 
 	</div>
@@ -254,7 +257,6 @@
 </footer>
 <!-- FOOTER END-->
 
-	<!-- FOOTER END-->
 	<script src="js/scripts.min.js"></script>
 
 </body>
