--- a/history.html
+++ b/history.html
@@ -64,7 +64,7 @@
 					</nav>
 				</div>
 
-				<div class="firstSection--content col-md-offset-2 col-md-10">
+				<div class="firstSection--content col-md-offset-3 col-md-6">
 					<p class="firstSection--content_mainText">Обєднання іноваційних та
                         динамічно зростающих бізнесів,
                         які діють на різних ринках</p>
@@ -308,12 +308,22 @@
 
 
 <!-- FOOTER -->
-<footer class="page-footer font-small blue">
+<footer class="footer page-footer font-small blue">
 
 	<!-- Copyright -->
 	<div class="row">
-		<div class="col-xs-offset-2 col-xs-8">
-			<p class="copyright">@2018 LIGA GROUP</p>
+		<div class="col-xs-offset-5 col-xs-2">
+			<img src="./img/logo.png" alt="" class="footer-img img-responsive">
+		</div>
+		<div class="col-xs-offset-3 col-xs-6">
+			<ul class="footer-nav">
+				<li><a href="history.html">ПРО НАС</a></li>
+				<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
+				<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
+				<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
+				<li><a href="career.html">КАР’ЄРА</a></li>
+				<li><a href="contacts.html">КОНТАКТИ</a></li>
+			</ul>
 		</div>
 
 	</div>
