--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
 									<li><a href="history.html">ПРО НАС</a></li>
 									<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
 									<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-									<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
 									<li><a href="career.html">КАР’ЄРА</a></li>
-									<li><a href="contacts.html">КОНТАКТИ</a></li>
+									<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
 								</ul>
 							</div>
 							<!-- /.navbar-collapse --> 
@@ -77,8 +76,8 @@
 			
 				<div class="firstSection--content col-md-offset-3 col-md-5">
 					<p class="firstSection--content_mainText">26 років бездоганної репутації 
-						високоефективного бізнесу <br>
-					на ринку україни</p>
+						високоефективного бізнесу
+					</p>
 				</div>
 			</div>
 			</div>
