--- a/media.html
+++ b/media.html
@@ -53,9 +53,9 @@
 									<li><a href="history.html">ПРО НАС</a></li>
 									<li><a href="social.html">ВІДПОВІДАЛЬНІСТЬ</a></li>
 									<li><a href="investors.html">ІНВЕСТОРАМ</a></li>
-									<li><a href="media.html">МЕДІА-ЦЕНТР</a></li>
+									<li><a class="choosen" href="media.html">МЕДІА-ЦЕНТР</a></li>
 									<li><a href="career.html">КАР’ЄРА</a></li>
-									<li><a href="contacts.html">КОНТАКТИ</a></li>
+								
 								</ul>
 							</div>
 							<!-- /.navbar-collapse --> 
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="buttons">
-                    <a class="f-red">НОВИНИ КОМПАНІЇ</a>
+                    <a class="f-red">НОВИНИ ГК</a>
                     <a class="f-blue">ЗМІ ПРО ГК</a>
                     <a class="f-green">МЕДІА матеріали</a>
                     <!-- <button class="f-all">Все элементы</button> -->
@@ -101,7 +101,7 @@
                         <p><img class="img-responsive" src="img/careerWork.jpg" alt="" /></p>
                         <figcaption>
                             <p>30 серпня 2018 року</p>
-                            <p>Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
+                            <p class="fz20">Група Компаній «ЛІГА» працює як відповідальний бізнес, в основі якого лежать єдині цінності: Динамічність, Ефективність, Відповідальність, Підприємливість на рівні ДНК, Інноваційність та Творення.</p>
                             <p><a href="#">Детальніше</a></p>
                         </figcaption>
                     </figure>
